# coldfire

./: CONTRIBUTORS  ColdFireEmu_HOWTO.txt  HACKING  INSTALL  Makefile.in  Makefile.rules.in  README  addressing.c  addressing.h  autogen.sh  board.c  coldfire.h  config.h.in  configdefs.h  configure  configure.ac  cycle.c  exception.c  handlers.c  i.c  main.c  memory.c  memory.h  misc.c  network.c  profile.c  profile.h  run.c  sim.c  stats.c  stats.h
boards/: arnewsh-5206.board  cjdesign-5307.board  elia-5307.board  lite-5206e.board
isa_a/: Makefile.in  i_add.c  i_adda.c  i_addi.c  i_addq.c  i_addx.c  i_and.c  i_andi.c  i_asx.c  i_bcc.c  i_btst.c  i_clr.c  i_cmp.c  i_cmpa.c  i_cmpi.c  i_dc.c  i_div.c  i_eor.c  i_eori.c  i_ext.c  i_halt.c  i_illegal.c  i_jmp.c  i_jsr.c  i_lea.c  i_link.c  i_lsx.c  i_move.c  i_movec.c  i_movem.c  i_moveq.c  i_movexr.c  i_mulu_l.c  i_mulu_w.c  i_neg.c  i_negx.c  i_nop.c  i_not.c  i_or.c  i_ori.c  (+16 more)
isa_b/: Makefile.in  bcc.c  cmp.c  isa_b.h
monitor/: Makefile.in  br.c  cfrm.c  de.c  di.c  dl.c  dn.c  elf-include.h  go.c  help.c  main.c  md.c  mm.c  monitor.h  quit.c  rd.c  reset.c  rm.c  set.c  ss.c  time.c  trace.c  tracer.c
peripherals/: Makefile.in  isa.c  peripherals.h  ram.c  sim_5206.c  sim_5206.h  sim_5307.c  timer_5206.c  uart_5206.c
tracer/: Makefile.in  tracer.h
